# M2_TJ

./: .gitignore  README.md  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: draft-pdf.yml  tests.yml
docs/: Makefile  requirements.txt
docs/source/: Example_RMSmaps.ipynb  FitPressureProfile_LW-WIKID.ipynb  FitPressureProfile_LW.ipynb  Get_A10_MUSTANG2_numbers.ipynb  LW_SimObs_A10-WIKID.ipynb  LW_SimObs_HDU_M2.ipynb  Leightweight_SimObs_A10.ipynb  M2_FitPressureProfile.ipynb  M2_SimObs_A10.ipynb  M2_SimObs_A10_user_defined_fits.ipynb  M2_t_cluster_detection.ipynb  ObserverWorkshop_M0647.ipynb  SinglePointing_M2.ipynb  TransferFunction_WIKID_scansize_3.5.npy  TransferFunction_WIKID_scansize_3s5.npy  Visibility_From_GB.ipynb  api.rst  conf.py  index.rst  install.rst  intro.rst  modules.rst  notebooks.rst  usage.rst
paper/: MUSTANG-2_Proposal_Tools.md.backup  paper.bib  paper.md  paper.md.backup
src/M2_ProposalTools/: Example_RMSmaps.ipynb  FilterImages.py  Get_A10_MUSTANG2_numbers.ipynb  LW_simobs.ipynb  MakeRMSmap.py  ModelFitting.py  WorkHorse.py  analytic_integrations.py  xfer_Function_3p5_21Aonly_PCA5_0f08Filtering.txt  xfer_Function_4p0_21Aonly_PCA5_0f08Filtering.txt  xfer_Function_4p5_21Aonly_PCA5_0f08Filtering.txt  xfer_Function_5p0_21Aonly_PCA5_0f08Filtering.txt
src/MUSTANG_2_Proposal_Tools.egg-info/: PKG-INFO  SOURCES.txt
src/m2_proposal_tools/: xfer_Function_3p0_21Aonly_PCA5_0f08Filtering.txt
tests/: test_M2_ProposalTools.py
(+2 files in other folders)
