[project]
name = "M2_TJ_CharlesERomero"
version = "0.0.1"
authors = [
  { name="Charles Romero", email="ceromero@sas.upenn.edu" },
]
description = "Package for MUSTANG-2 Technical Justification"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=M2_ProposalTools"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[project.urls]
Homepage = "https://github.com/CharlesERomero/M2_TJ"